Added Celery with Redis support

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
 flask
-flask-SQLAlchemy
+flask_SQLAlchemy
 jinja2
 flask_security_too
 argon2_cffi
-flask-migrate
+flask_migrate
+flask_caching
+flask_mail
+celery
+redis_server
+flask_security
+setuptools
+flask_mail
